<resources>
    <string name="app_name">National Day Parade Theme Song Compilation</string>
    <string name="title">Song Title</string>
    <string name="enter_title">Enter song title here</string>
    <string name="singer">Singers</string>
    <string name="enter_singer">Enter Singers\' name here</string>
    <string name="year">Year</string>
    <string name="enter_year">Enter year of release here</string>
    <string name="star">Stars</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="insert">INSERT</string>
    <string name="show">SHOW LIST</string>
    <string name="five_star">SHOW ALL SONGS WITH 5 STARS</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="id">Song ID</string>
</resources>